# Kreuzen

./: Cargo.toml  ed85.txt  rust-toolchain.toml  rustfmt.toml
kreuzen/: Cargo.toml
kreuzen/examples/: all.rs  run.rs  trip.rs
kreuzen/src/: code.rs  func.rs  io.rs  lib.rs  spec.rs  split.rs  sugar.rs  table.rs  types.rs
kreuzen/src/code/: expr.rs  text.rs
kreuzen/src/func/: decompile.rs  dial.rs  expr.rs  read.rs  spec.rs  write.rs
kreuzen/src/func/read/: decompile.rs
kreuzen/src/spec/: cs1.txt  cs1_1.txt  cs1_2.txt  cs1_3.txt  cs1_menu.txt  cs2.txt  cs2_menu.txt  cs3.txt  cs4.txt  cs4_1.txt  ed81.txt  ed85.txt  mod.rs  opcode.rs  reverie.txt  reverie_1.txt  tx.txt
kreuzen/src/split/: btlwin.txt  tests.rs  w1210.txt  w1410.txt
kreuzen/src/table/: action_table.rs  add_collision.rs  algo_table.rs  anime_clip_table.rs  book.rs  book99.rs  break_table.rs  btlset.rs  effect.rs  fc_auto.rs  field_follow_data.rs  field_monster_data.rs  part_table.rs  preload.rs  reaction_table.rs  style_name.rs  summon_table.rs  weapon_att_table.rs
kreuzen/src/tables/: preload.rs
spec/: cs1.txt  cs1_1.txt  cs1_2.txt  cs1_3.txt  cs1_menu.txt  cs2.txt  cs2_1.txt  cs2_menu.txt  cs3.txt  cs3_1.txt  cs3_2.txt  cs3_3.txt  cs4.txt  cs4_1.txt  reverie.txt  reverie_1.txt  tx.txt
