[package]
name = "kreuzen"
version.workspace = true
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from", "into", "from_str"] }
extend = "1.2.0"
gospel.path = "../../Gospel"
hex = "0.4.3"
num_enum = "0.7.4"
snafu = "0.8.5"
tracing = { version = "0.1.40", features = ["attributes"] }

[dev-dependencies]
compact-debug = "0.1.3"
similar-asserts = "1.7.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
