[package]
name = "kreuzen"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from", "deref", "deref_mut", "from_str"] }
eyre = "0.6.12"
gospel = "0.3.1"
hex = "0.4.3"
tracing = "0.1.44"

[dev-dependencies]
compact-debug = "0.1.4"
eyre-span = "0.1.0"
tracing-subscriber = "0.3.22"
