[package]
name = "kreuzen"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from", "deref", "deref_mut", "from_str", "debug", "display", "try_from"] }
eyre = "0.6.12"
falcom-sjis = "0.1.2"
gospel = { version = "0.4.0", path = "../../Gospel" }
hex = "0.4.3"
regex = { version = "1.12.3", default-features = false, features = ["std", "perf"] }
tracing = "0.1.44"

[dev-dependencies]
compact-debug = "0.1.4"
eyre-span = "0.1.0"
tracing-subscriber = "0.3.22"

[features]
live = []
